Checkpoint: Actualización de branding - Logo LF CAPITAL integrado
✅ Nuevo en este checkpoint:
- Logo de LF CAPITAL creado basado en la marca matriz Looking Forward
- Diseño con el estilo característico "lf" + "CAPITAL"
- Logo integrado en navbar (reemplaza texto)
- Favicon añadido al navegador
- Meta tags actualizados con descripción SEO

✅ Mantiene todo lo anterior:
- Arquitectura de base de datos completa (9 tablas)
- Sistema de roles diferenciados
- Sistema multiidioma (ES/EN/AR)
- Tema visual de lujo
- Landing page profesional
- Sistema de autenticación

🔄 Pendiente:
- Dashboards personalizados por rol
- Sistema de gestión de propiedades
- Formularios KYC y Proof of Funds
- Sección del proyecto altruista
- Sistema de honorarios y gastos

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,10 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>LF CAPITAL</title>
+    <title>LF CAPITAL - Luxury Real Estate</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="description" content="Exclusivity and Confidentiality in Luxury Real Estate. We connect high-net-worth clients with exceptional properties." />
+    <meta name="keywords" content="luxury real estate, high-net-worth, confidential property sales, exclusive properties, LF Capital" />
     <!-- Google Fonts: Luxury Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
